# merl-an

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  flake.nix  merl-an.opam  merl-an.opam.template  merlan.opam  ocamlmerlin_bench.opam  query_replies.result  timing.result
.github/workflows/: main.yml  nix.yml  regression.yml
data/: analysis.ipynb
data/irmin+1669935078/: logs.json  metadata.json
data/js_2023_02_06/: analysis.ipynb
data/js_2023_02_06/cold/: commands.json  metadata.json  performances.json
data/js_2023_02_06/warm/: commands.json  metadata.json  performances.json
data/merl-an+1669932560/: commands.json  logs.json  merlin_reponses.json  metadata.json  performance.json
data/merl-an_pure/: commands.json  logs.json  metadata.json  query_responses.json
data/merl-an_regression/: commands.json  logs.json  query_responses.json
data/ocamlmerlin_bench/: files.json  metadata.json  query_info.json  query_replies.json  timing.json
data/ocamlmerlin_bench/old/: timing.json
data/ppxlib/: files.json
data/ppxlib+1669933149/: logs.json  metadata.json
dev/: test.sh  test_bench.sh  test_perf.sh  test_regression.sh  trying_pandas.ipynb
lib/: backend.ml  backend.mli  data.ml  data.mli  dune  file.ml  file.mli  import.ml  import.mli  io.ml  logs.ml  logs.mli  merl_an.ml  merlin.ml  merlin.mli  reservoir.ml  reservoir.mli  samples.ml  samples.mli  tables.ml  tables.mli  workflows.ml  workflows.mli
regression/: dune  run.t
test/: dune
test/behavior.t/: run.t
test/bench.t/: bench.ml  bench1.ml  run.t
test/error_regression.t/: run.t  test.ml
test/location.t/: run.t
test/location.t/files/: location.ml
test/mock/: dune  merlin_mock.ml
test/perf.t/: run.t
